# homophone-replacer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.pynini  README.md  build.bat  build.sh
cmake/: http-service-deps.cmake
config/: service.json
data/hr-files/: fst-build-report.txt  mapping.txt  replace.fst
docs/: service-deployment.md
docs/superpowers/plans/: 2026-07-14-tone-aware-fst.md  2026-07-15-linux-windows-http-service.md
docs/superpowers/specs/: 2026-07-14-tone-aware-fst-design.md  2026-07-15-linux-windows-http-service-design.md
make_replace/: benchmark_builders.py  build_replace_fst.py  generate_mapping.py  generate_replace_fst_colab.ipynb  lexicon_mapping.py  main.py  rule_planner.py
make_replace/tests/: test_build_replace_fst.py  test_lexicon_mapping.py  test_main_cli.py  test_rule_planner.py  test_runtime_cli.py
packaging/: homophone-replacer.service
scripts/: build_fst_docker.sh  install-service.bat  install-service.sh  package-linux.sh  package-windows.bat  run-server.bat  run-server.sh  start-service.bat  stop-service.bat  uninstall-service.bat  uninstall-service.sh
src/: homophone-replacer.cc  homophone-replacer.h  main.cc  runtime-rule-matcher.cc  runtime-rule-matcher.h
src/server/: http-server.cc  http-server.h  main.cc  replacer-pool.cc  replacer-pool.h  service-api.cc  service-api.h  service-config.cc  service-config.h  service-runner.cc  service-runner.h  text-replacer.cc  text-replacer.h  windows-service.cc  windows-service.h
tests/: http-server-load-test.py  http-server-smoke-test.py  replacer-pool-test.cc  runtime-rule-matcher-test.cc  service-api-test.cc  service-config-test.cc  windows-script-test.py
tools/: __init__.py  analyze_ova2.py
